--- a/app/app.html
+++ b/app/app.html
@@ -3,25 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Remotino</title>
-    <link rel="stylesheet" href="../node_modules/font-awesome/css/font-awesome.min.css" />
-    <script>
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+<!--    <script>
       (function() {
         if (!process.env.HOT) {
           const link = document.createElement('link');
           link.rel = 'stylesheet';
-          link.href = '../dist/style.css';
-          document.write(link.outerHTML);
+          link.href = './dist/style.css';
+          // HACK: Writing the script path should be done with webpack
+          document.getElementsByTagName('head')[0].appendChild(link);
         }
       }());
-    </script>
+    </script> -->
   </head>
   <body>
     <div id="root"></div>
     <script>
       (function() {
         const script = document.createElement('script');
-        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/bundle.js' : '../dist/bundle.js';
-        document.write(script.outerHTML);
+        script.src = (process.env.HOT) ? 'http://localhost:3000/dist/bundle.js' : './dist/bundle.js';
+        // HACK: Writing the script path should be done with webpack
+        document.body.appendChild(script);
       }());
     </script>
   </body>
